fixes line wrapping on import/export text areas

--- a/src/client/backup/export.scss
+++ b/src/client/backup/export.scss
@@ -11,6 +11,7 @@
     width: 100%;
     height: 20em;
     font-family: $monospace;
+    white-space: pre;
   }
 
   .copy {
