--- a/src/client/backup/import.scss
+++ b/src/client/backup/import.scss
@@ -11,6 +11,7 @@
     width: 100%;
     height: 20em;
     font-family: $monospace;
+    white-space: pre;
   }
 
   .import-button {
